2013-02-12  Karl Berry  <karl@gnu.org>

	* pretest 4.13.97.

2013-02-10  Karl Berry  <karl@gnu.org>

	* info/tag.c (tag_found_keyword): new fn, including a check
	for the text buffer being realloc-ed, invalidating kw.  Sigh.
	(tag_image): call it (twice).

2013-02-10  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh, tp/maintain/regenerate_cmd_tests.sh, tp/tests/*:
	Generate automatically test file scripts for each test in 
	tp/tests/*.
	* tp/Makefile.am: run directly tap tests in Makefile.am.

2013-02-09  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/Makefile.am, tp/maintain/regenerate_file_lists.pl:
	prepare for running directly tap tests in Makefile.am.

2013-02-07  Karl Berry  <karl@gnu.org>

	* contrib/booklet.mak: new contribution from John Darrington.

	* Pod-Simple-Texinfo/pod2texi.pl (preamble): back to inserting
	the default.
	* contrib/perldoc-all/GNUmakefile (pod2texi_args): omit it.

2013-02-04  Karl Berry  <karl@gnu.org>

	* pretest 4.13.96.

	* contrib/perldoc-all/GNUmakefile (distclean): new target.
	* Makefile.am (dist-hook): use it.

2013-02-03  Karl Berry  <karl@gnu.org>

	* contrib/perldoc-all: example making Texinfo from Perl's *.pod.
	* util/dir-example (Perl): add it.
	* util/gendocs.sh: add --source, --common, --split --no-ascii.
	Prettify output.
	* doc/Makefile.am (gendocs): use the version from our
	source hierarchy, since it's maintained here.

	* Pod-Simple-Texinfo/pod2texi.pl (preamble): null if making
	@include files.  More doc.
	* doc/texinfo.txi (Invoking pod2texi): new node.

2013-02-03  Karl Berry  <karl@gnu.org>

	* tp/Makefile.am: doc fix.
	* tp/maintain/regenerate_docstr.sh: do not depend on directories
	with their unpredictable timestamps.
	* tp/maintain/regenerate_file_lists.pl: copyright year update.

	* po_document/pl.po: new translation.
	* po_document/LINGUAS: add it.

2013-02-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (@normalturnoffactive): also reset -, so
	@code{@xref{-}} works.