@@ -1,3 +1,11 @@
+2013-02-13  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	Fix Bug#700354.
+
+	* info/window.c (window_make_window): Initialize allocated
+	memory.
+	(string_to_node): Likewise.
+
 2013-02-12  Karl Berry  <karl@gnu.org>
 
 	* pretest 4.13.97.
